kube/manifest/rest-server-deploy.yaml
# rest-server-deploy.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest-server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rest-server
  template:
    metadata:
      labels:
        app: rest-server
    spec:
      containers:
        - name: rest-server-container
          image: redduality/wyd-rest-server:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: rest-server-service
spec:
  selector:
    app: rest-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
